Added open graph meta data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 
         <!--Проверить как выглядит на телефоне с viewport и без-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
+        <meta name="description" content="Самые свежие статьи о растительности Абакана">
+        <meta name="og:description" content="Здесь вы можете узнать о крапиве и крапиворождённых!">
+        <meta name="og:title" content="Растительность Абакана">
+        <meta name="og:image" content="res/IMG_0002.jpg">
+        <meta name="og:image:alt" content="Крапивка">
+
         <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
         <link rel="stylesheet" href="res/styles.css" />
