Added new openGraph tags and fixed image link in tags

--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
         <title>Крапива</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"  />
-        
+
         <meta name="description" content="Самые свежие статьи о растительности Абакана">
+        
+        <meta property="og:url" content="https://wardroben.github.io/krapiva/">
+        <meta property="og:type" content="website">
         <meta name="og:description" content="Здесь вы можете узнать о крапиве и крапиворождённых!">
         <meta name="og:title" content="Растительность Абакана">
-        <meta name="og:image" content="res/IMG_0002.jpg">
+        <meta name="og:image" content="https://wardroben.github.io/krapiva/res/IMG_0004.jpg">
         <meta name="og:image:alt" content="Крапивка">
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="wardroben.github.io">
+        <meta property="twitter:url" content="https://wardroben.github.io/krapiva/">
+        <meta name="twitter:title" content="Растительность Абакана">
+        <meta name="twitter:description" content="Здесь вы можете узнать о крапиве и крапиворождённых!">
+        <meta name="twitter:image" content="https://wardroben.github.io/krapiva/res/IMG_0004.jpg">
 
         <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="res/styles.css" />
