Fixed header overflow

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <div class="container main-content">
             <header>
-                <nav class="header-nav container">
+                <nav class="header-nav">
                     <a href="#contacts">Написать автору</a>
                     <a href="https://google.com">В гугол?</a>
                 </nav>
