Changed first column of krapiva table and fixed header text alignment

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#contacts">Написать автору</a>
                     <a href="https://google.com">В гугол?</a>
                 </nav>
-                <h1 class="site-header">Растительность Абакана</h1>
+                <h1 class="site-header-text">Растительность Абакана</h1>
             </header>
             <main>
                 <article class="article">
@@ -93,40 +93,40 @@
                             </thead>
                             <tbody>
                                 <tr id="kr-lvl0">
-                                    <td>1 (0) нулёвка</td>
+                                    <td>нулёвка</td>
                                     <td class="image-td"><img  src="res/IMG_0004.jpg" /></td>
                                     <td class="justify-table-text">Это была приятная встреча, будто любимый человек пощекотал тебя пером птичьим. Её мы даже спутали просто с травой. Только через время поняли, что это крапива, после детального осмотра и нахождения жал. Они жалят, но совсем незаметно и ласково. Чувствуется приятное жжение и желание почесать это место. Волдыри появляются, но незаметно. Боль от удара крапивой перебивает боль укуса.</td>
                                 </tr>
                                 <tr id="kr-lvl1">
-                                    <td>2 (1) детская</td>
+                                    <td>детская</td>
                                     <td class="image-td"><img src="res/IMG_0005.png" /></td>
                                     <td class="justify-table-text">С этого уровня уже чувствуется боль. Она переполнена жалами, но из-за молодости и ласковости жалит по-детски. Листья сверху покрыты иглами. Детская крапивка, которая жалеет любого пострадавшего. Волдыри стандартные и их много, как иголок.</td>
                                 </tr>
                                 <tr id="kr-lvl2">
-                                    <td>3 (2) класик</td>
+                                    <td>класик</td>
                                     <td rowspan="3" class="image-td"><img src="res/IMG_0006.jpg" /></td>
                                     <td class="justify-table-text">Чуть сильнее детской, но опасность её в том, что её можно спутать с более сильным уровнем.</td>
                                 </tr>
                                 <tr id="kr-lvl3">
-                                    <td>4 (3) Классик +-</td>
+                                    <td>Классик +-</td>
                                     <td class="justify-table-text">Обладает сильным разбросом в болевых ощущениях.</td>
                                 </tr>
                                 <tr id="kr-lvl4">
-                                    <td>5 (4) Крепостная</td>
+                                    <td>Крепостная</td>
                                     <td class="justify-table-text">Становиться серьезным испытанием для некоторых. Безусловно заставит ретироваться ребёнка до 12 лет.</td>
                                 </tr>
                                 <tr id="kr-lvl5">
-                                    <td>6 (5) Бронебойная</td>
+                                    <td>Бронебойная</td>
                                     <td class="image-td"><img src="res/IMG_0007.jpg" /></td>
                                     <td class="justify-table-text">Оружие массового поражения. Обладает большой прочностью (долго хранится) и имеет эффект долгодействия. Пробивает одежду. Боль в пальцах становится нетерпимой. Боль пульсирующая. </td>
                                 </tr>
                                 <tr id="kr-lvl6">
-                                    <td>7 (6) Гигант</td>
+                                    <td>Гигант</td>
                                     <td class="image-td"><img src="res/IMG_0008.jpg" /></td>
                                     <td class="justify-table-text">Пробивает джинсы. Иглы придётся доставать из кожи. Бабки даже не смотрят в её сторону.  От её боли даже мужики будут стонать и бегать. Отпугивает всех детей в радиусе от 10 метров. </td>
                                 </tr>
                                 <tr id="kr-lvl7">
-                                    <td>8 (7) Исполинская</td>
+                                    <td>Исполинская</td>
                                     <td class="image-td"><img src="res/IMG_0010.jpg" alt="Исполинская крапива"/></td>
                                     <td class="justify-table-text">Человек не в состоянии разговаривать, не может стоять и держать равновесия, а также проявляется бред. Возможны неконтролируемые стоны и плач. Болевые ощущения такой силы приходится испытывать очень малому количеству людей на планете. Пульсирующая боль неотличима от сокращений сердца. Волдыри здоровые. Чтобы убить неподготовленного человека болевым шоком, нужно попасть водой на место укуса</td>
                                 </tr>
