--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <p>
                         <img src="res/IMG_0002.jpg" alt="Дарительница радости - крапивушка" />
-                        Ну что ж, пришла пора рассказать вам про эти растения Хакасии, зачем же мы передаём вам от них благодарность? Существует такое растение, название которого крапива. Мы – крапиворожденные. Крапива – наша гордость, а мы, гордость крапивы. Любой, кто позариться на нашу любимую гордость крапиву, получит крапивой по заду. Заднему месту заднице, а если задница защищена от крапивы, то получит по лицу ею.
+                        Ну что ж, пришла пора рассказать вам про эти растения Хакасии, зачем же мы передаём вам от них благодарность? Существует такое растение, название которого крапива. Мы – крапиворожденные. Крапива – наша гордость, а мы, гордость крапивы. Любой, кто позарится на нашу любимую гордость крапиву, получит крапивой по заду. Заднему месту заднице, а если задница защищена от крапивы, то получит по лицу ею.
     Сейчас вы видите справа нашу дарительницу радости крапивушку.
                     </p>
     
@@ -113,7 +113,7 @@
                                 </tr>
                                 <tr id="kr-lvl4">
                                     <td>Крепостная</td>
-                                    <td class="justify-table-text">Становиться серьезным испытанием для некоторых. Безусловно заставит ретироваться ребёнка до 12 лет.</td>
+                                    <td class="justify-table-text">Становится серьезным испытанием для некоторых. Безусловно заставит ретироваться ребёнка до 12 лет.</td>
                                 </tr>
                                 <tr id="kr-lvl5">
                                     <td>Бронебойная</td>
@@ -137,7 +137,7 @@
                         <h2>Вопросы и ответы</h2>
                         <details>
                         <summary>Данный документ был изменён в 2019 году, а написан и то позже. Что сейчас с культом?</summary>
-                            <p>Правда, документ старее. Даже не могу ответить, существует культ или нет, но все основатели живы и один из них разведует обстановку в другом регионе России. Если будут правки, то обязательно отобразяться здесь и будут датированы.</p>
+                            <p>Правда, документ старее. Даже не могу ответить, существует культ или нет, но все основатели живы и один из них разведует обстановку в другом регионе России. Если будут правки, то обязательно отобразятся здесь и будут датированы.</p>
                         </details>
                         <details>
                             <summary>Эволюционирует ли крапива?</summary>
@@ -145,7 +145,7 @@
                         </details>
                         <details>
                             <summary>Когда новые статьи</summary>
-                            <p>Да прибудет с нами сила Крапивы! Работы над развитием культа ведуться, но силы наши на пределе. Не молодые мы уже. Ждите новостей, когда пройдёт зимушка мы дождёмся появления исполинской <i>царевны</i> и пройдём испытание, ибо стали мы крепче, а кожа суровее!</p>
+                            <p>Да прибудет с нами сила Крапивы! Работы над развитием культа ведутся, но силы наши на пределе. Не молодые мы уже. Ждите новостей, когда пройдёт зимушка мы дождёмся появления исполинской <i>царевны</i> и пройдём испытание, ибо стали мы крепче, а кожа суровее!</p>
                         </details>
                     </div>
                 </article>
